# spore-embed

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/scripts/: get_version.sh
.github/workflows/: ci.yml
cmake/: SporeEmbed.cmake
include/spore/embed/: .gitignore  embed_app.hpp  embed_error.hpp  embed_format.hpp  embed_options.hpp  embed_version.hpp.in
include/spore/embed/utils/: files.hpp
src/: CMakeLists.txt  main.cpp
